Added logout link

--- a/public/login.html
+++ b/public/login.html
@@ -1,6 +1,11 @@
 <html>
   <body>
     <h1>Login</h1>
-    <a href="/.auth/login/github?post_login_redirect_uri=/">Login with GitHub</a>
+    <div>
+      <a href="/.auth/login/github?post_login_redirect_uri=/">Login with GitHub</a>
+    </div>
+    <div>
+      <a href="/.auth/logout">Log out</a>
+    </div>
   </body>
 </html>
